fix / custom css letter-spacing

--- a/editor-css/_editor_before_custom-css-extension.scss
+++ b/editor-css/_editor_before_custom-css-extension.scss
@@ -11,6 +11,7 @@
 		padding: .2em .6em;
 		z-index: 1000;
 		line-height: 1.2;
+		letter-spacing: 1px;
 		content: 'Custom CSS' !important;
 	}
 }
